# aerostack2

./: .gitignore  .gitmodules  .uncrustify.cfg  CHANGELOG  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  codecov.yaml  dependency_repos.repos  pixi.toml
aerostack2/: CHANGELOG.rst  CMakeLists.txt  Doxyfile  package.xml  pixi.toml
aerostack2/docs/: index.rst
as2_aerial_platforms/as2_pixhawk_platform/: .clang-format  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
as2_aerial_platforms/as2_platform_crazyflie/: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
as2_aerial_platforms/as2_platform_dji_osdk/: .gitignore  CHANGELOG.rst  CMakeLists.txt  package.xml
as2_aerial_platforms/as2_platform_dji_psdk/: CMakeLists.txt  Doxyfile  README.md  package.xml
as2_aerial_platforms/as2_platform_gazebo/: .gitignore  CHANGELOG.rst  CMakeLists.txt  package.xml  pixi.toml
as2_behavior_tree/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  install_bt_dependencies.bash  package.xml  pixi.toml
as2_behavior_tree/launch/: behavior_trees.launch.py  behaviour_trees.launch.py  tsv_behavior_trees.launch.py
as2_behavior_tree/resource/: RTL_test_2.xml  actions.xml  arm_test.xml  basic_mission.xml  follow_path_test.xml  test.xml
as2_behavior_tree/src/: as2_behavior_tree_node.cpp
as2_behavior_tree/test/: port_pose.cpp
as2_behavior_tree/tests/: port_pose_test.cpp  port_test.cpp
as2_camera_overlay/: CMakeLists.txt  README.md  example.txt  package.xml  plugins.xml  tests.txt
as2_camera_overlay/as2-camera-overlay-course/: _base.html  index.html  main.js  styles.css
as2_camera_overlay/config/: defaults.yaml  synthetic.yaml
as2_camera_overlay/include/: camera_projection.hpp  display_loader.hpp  frame_helpers.hpp  frame_utils.hpp  headless_display_context.hpp  headless_frame_manager.hpp  headless_ros_node.hpp  headless_rviz.hpp  overlay_display_base.hpp  overlay_node.hpp  overlay_renderer.hpp  param_helpers.hpp  tf2_buffer_frame_transformer.hpp
as2_camera_overlay/launch/: camera_overlay.launch.py
as2_camera_overlay/src/: camera_projection.cpp  display_loader.cpp  frame_helpers.cpp  frame_utils.cpp  headless_display_context.cpp  headless_frame_manager.cpp  headless_ros_node.cpp  headless_rviz.cpp  main.cpp  overlay_display_base.cpp  overlay_node.cpp  overlay_renderer.cpp  tf2_buffer_frame_transformer.cpp
as2_cli/: .gitignore  CHANGELOG.rst  CMakeLists.txt  as2.bash  package.xml  pixi.toml  projects.repos  setup_env.bash
as2_cli/bash_utils/: argparser.bash  as2_autocompletion.bash  as2_build.bash  as2_cd.bash  as2_clean.bash  as2_core_function.bash  as2_list.bash  as2_projects.bash  as2_test.bash
as2_core/: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  doxygen.dox  package.xml  pixi.toml
as2_core/as2_core/: __init__.py  declare_launch_arguments_from_config_file.py  launch_configuration_from_config_file.py  launch_param_utils.py  launch_plugin_utils.py  log_action.py
as2_core/cmake/: GeographicLib-extras.cmake  python3-extras.cmake  yaml-cpp-extras.cmake  yaml-cpp.cmake
as2_core/docs/: index.rst
as2_core/src/: _as2_core_pybind11.cpp  aerial_platform.cpp  aerial_platform_details.cpp  arducam_interface.cpp  core_functions.cpp  node.cpp  node_with_init.cpp  platform_state_machine.cpp  polynomial_thrust_map.cpp  rate.cpp  sensor.cpp  thrust_map.cpp
as2_core/tests/: CMakeLists.txt  frame_test.cpp  platform_state_machine_test.cpp  sensor_test.cpp  tf2_namespace_test.cpp  tf_utils_gtest.cpp
as2_cpp_api/: CMakeLists.txt  package.xml
as2_cpp_api/examples/: mission.cpp
as2_cpp_api/src/: drone_interface.cpp  drone_interface_base.cpp
as2_map_server/: CHANGELOG.rst  CMakeLists.txt  LICENSE  package.xml  pixi.toml  plugins.xml
as2_map_server/launch/: map_server.launch.py
as2_map_server/src/: map_server.cpp  map_server_node.cpp
as2_map_server/tests/: CMakeLists.txt  map_server_gtest.cpp
as2_motion_controller/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  pixi.toml  plugins.xml
as2_motion_controller/config/: motion_controller_default.yaml
as2_motion_controller/launch/: composed_controller.launch.py  controller_launch.py  differential_flatness_controller-motion_controller.launch.py  differential_flatness_controller.launch.py  motion_controller.launch.py  pid_speed_controller-motion_controller.launch.py  pid_speed_controller.launch.py  tsv_controller_launch.py  tsv_controller_launch_session.py
as2_motion_controller/src/: as2_motion_controller.cpp  as2_motion_controller_node.cpp  controller_handler.cpp  controller_manager (copia).cpp  controller_manager.cpp  controller_manager_node.cpp  param_utils.cpp
as2_motion_controller/tests/: as2_motion_controller_gtest.cpp  find_mode_match_test.cpp
as2_motion_reference_handlers/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  pixi.toml
as2_motion_reference_handlers/as2_motion_reference_handlers/: basic_motion_references.py  hover_motion.py  position_motion.py  speed_in_a_plane.py  speed_motion.py  utils.py
as2_motion_reference_handlers/motion_reference_handlers/: hover_motion.py  position_motion.py  speed_in_a_plane.py
as2_motion_reference_handlers/src/: acro_motion.cpp  basic_motion_references.cpp  hover_motion.cpp  position_motion.cpp  speed_in_a_plane_motion.cpp  speed_motion.cpp  trajectory_motion.cpp
as2_msgs/: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  pixi.toml
as2_msgs/action/: ArucoMarkersDetect.action  Detect.action  DetectObjects.action  FollowPath.action  FollowReference.action  ForceEstimation.action  GeneratePolynomialTrajectory.action  GoToWaypoint.action  GripperHandler.action  Land.action  MassEstimation.action  NavigateToPoint.action  ParamEstimation.action  PointGimbal.action  Rotate.action  SetArmingState.action  Spin.action  TakeOff.action  (+2 more)
as2_path_planning/: CMakeLists.txt  README.md  package.xml
as2_python_api/: .gitignore  CHANGELOG.rst  README.md  colcon.pkg  package.xml  pixi.toml  setup.cfg  setup.py
as2_state_estimator/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  pixi.toml  plugins.xml
(+2328 files in other folders)
