<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aerostack2</name>
  <version>1.0.9</version>
  <description>Aerostack2 is a ROS2-based framework for the development of autonomous systems for aerial robotics.</description>

  <maintainer email="cvar.upm3@gmail.com">CVAR-UPM</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <exec_depend>as2_core</exec_depend>
  <exec_depend>as2_keyboard_teleoperation</exec_depend>
  <exec_depend>as2_msgs</exec_depend>
  <exec_depend>as2_motion_reference_handlers</exec_depend>
  <exec_depend>as2_python_api</exec_depend>
  <exec_depend>as2_visualization</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
