<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>as2_camera_overlay</name>
  <version>0.1.0</version>
  <description>
    Headless rviz-style AR camera publisher for Aerostack2. Projects MarkerArray,
    Grid, Path, PoseArray, TF frames and more into a camera image using Ogre
    render-to-texture and publishes the result as a sensor_msgs/Image.
  </description>

  <maintainer email="cvar.upm3@gmail.com">CVAR-UPM</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>pluginlib</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>rviz_rendering</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>rviz_ogre_vendor</depend>
  <depend>ament_index_cpp</depend>
  <depend>libopencv-dev</depend>
  <depend>eigen</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
