<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>as2_cli</name>
  <version>1.1.2</version>
  <description>AS2 CLI Package</description>
  
  <maintainer email="cvar.upm3@gmail.com">CVAR-UPM</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
